# modgeo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  imgui.ini
AppTinyMesh/Include/: qte.h
AppTinyMesh/Source/: interface.ui  mesh.cpp  qtemainwindow.cpp
data/shaders/: edges.glsl  mesh.glsl  points.glsl
src/: Application_2.htxt  CMakeLists.txt  main.cpp
src/Include/: App.h  Application.h  Bezier.h  Box.h  Framebuffer.h  Implicit.h  SDF.h  Timer.h  Viewer.h  Window.h  bezier.h  implicit.h  pch.h  utils.h  vecext.h  window.h
src/Source/: App.cpp  Application.cpp  Bezier.cpp  Box.cpp  Framebuffer.cpp  Implicit.cpp  SDF.cpp  Timer.cpp  Viewer.cpp  Window.cpp  bezier.cpp  implicit.cpp  main.cpp  vecext.cpp  window.cpp
